--- a/index.html
+++ b/index.html
@@ -1,56 +1,121 @@
-(() => {
-  const color = document.getElementById('colorPicker');
-  const size = document.getElementById('sizeSlider');
-  const sizeOut = document.getElementById('sizeOut');
-  const opacity = document.getElementById('opacitySlider');
-  const opacityOut = document.getElementById('opacityOut');
-  const brushSelect = document.getElementById('brushSelect');
-  const clearBtn = document.getElementById('clearBtn');
-  const saveBtn = document.getElementById('saveBtn');
-  const undoBtn = document.getElementById('undoBtn');
-  const redoBtn = document.getElementById('redoBtn');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+  <title>ArtFlow 250</title>
+  <link rel="stylesheet" href="css/style.css"/>
+  <meta name="theme-color" content="#ff0055">
+</head>
+<body>
+  <aside class="panel">
+    <h1>ArtFlow 250</h1>
 
-  /* заполняем select 100 кистей */
-  Object.keys(window.BRUSHES).forEach(name => {
-    const opt = document.createElement('option');
-    opt.value = name;
-    opt.textContent = name.charAt(0).toUpperCase() + name.slice(1);
-    brushSelect.appendChild(opt);
-  });
+    <label>Color
+      <input type="color" id="colorPicker" value="#ff0055">
+    </label>
 
-  /* рисуем линию интерполированно */
-  window.drawLine = (x1, y1, x2, y2) => {
-    const dx = x2 - x1, dy = y2 - y1;
-    const steps = Math.ceil(Math.hypot(dx, dy) / 2);
-    for (let i = 0; i <= steps; i++) {
-      const t = i / steps;
-      window.drawBrush(x1 + dx * t, y1 + dy * t);
-    }
-  };
+    <label>Size
+      <input type="range" id="sizeSlider" min="1" max="150" value="20">
+      <output id="sizeOut">20</output>
+    </label>
 
-  /* один штрих */
-  window.drawBrush = (x, y) => {
-    const ctx = window.core.ctx;
-    const r = +size.value;
-    const col = color.value;
-    const op = +opacity.value;
-    const key = brushSelect.value;
-    window.BRUSHES[key](ctx, x, y, r, col, op);
-  };
+    <label>Opacity
+      <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="1">
+      <output id="opacityOut">1</output>
+    </label>
 
-  /* controls */
-  size.oninput = () => sizeOut.value = size.value;
-  opacity.oninput = () => opacityOut.value = opacity.value;
-  clearBtn.onclick = () => {
-    window.core.ctx.clearRect(0, 0, window.core.canvas.width, window.core.canvas.height);
-    window.core.saveState();
-  };
-  saveBtn.onclick = () => {
-    const link = document.createElement('a');
-    link.download = 'art_' + Date.now() + '.png';
-    link.href = window.core.canvas.toDataURL();
-    link.click();
-  };
-  undoBtn.onclick = () => window.undo();
-  redoBtn.onclick = () => window.redo();
-})();
+    <label>Brush
+      <select id="brushSelect"></select>
+    </label>
+
+    <!-- Слои -->
+    <h2>Layers</h2>
+    <div class="row">
+      <button id="addLayerBtn">+ Layer</button>
+      <button id="delLayerBtn">– Layer</button>
+    </div>
+    <label>Active
+      <select id="layerSelect">
+        <option value="0">Layer-1</option>
+      </select>
+    </label>
+    <label>Opacity
+      <input type="range" id="layerOpacity" min="0" max="1" step="0.05" value="1">
+    </label>
+
+    <!-- Ластики / смешивание -->
+    <h2>Color blend & erasers</h2>
+    <select id="blendEraserSelect">
+      <option value="none">None</option>
+      <optgroup label="Blend">
+        <option value="blend-water">Water blend</option>
+        <option value="blend-oil">Oil blend</option>
+        <option value="blend-gradient">Gradient blend</option>
+        <option value="blend-smudge">Smudge+</option>
+        <option value="blend-charge">Color-charge</option>
+      </optgroup>
+      <optgroup label="Erasers+">
+        <option value="eraser-fabric">Fabric eraser</option>
+        <option value="eraser-ink">Ink eraser</option>
+        <option value="eraser-light">Light ray</option>
+        <option value="eraser-crystal">Crystal shards</option>
+        <option value="eraser-sand">Sand blast</option>
+      </optgroup>
+    </select>
+    <button id="eraserBtn">🧹 Eraser On</button>
+
+    <!-- Природа -->
+    <h2>Nature</h2>
+    <select id="natureSelect">
+      <option value="none">None</option>
+      <option value="grass">Grass</option>
+      <option value="leaves">Leaves</option>
+      <option value="bark">Bark</option>
+      <option value="stones">Stones</option>
+      <option value="water">Water</option>
+      <option value="clouds">Clouds</option>
+      <option value="snow">Snow</option>
+      <option value="sand">Sand</option>
+    </select>
+
+    <!-- Дизайн платьев -->
+    <h2>Dress design</h2>
+    <select id="dressSelect">
+      <option value="none">None</option>
+      <option value="silk">Silk</option>
+      <option value="velvet-d">Velvet</option>
+      <option value="lace">Lace</option>
+      <option value="embroidery">Embroidery</option>
+      <option value="sequins">Sequins</option>
+      <option value="drapery">Drapery</option>
+    </select>
+
+    <!-- Линейки (Alt) -->
+    <h2>Rulers (Hold Alt)</h2>
+    <select id="rulerSelect">
+      <option value="none">Free</option>
+      <option value="line">Line</option>
+      <option value="square">Square</option>
+      <option value="compass">Compass</option>
+      <option value="bezier">Bezier</option>
+      <option value="grid">Grid</option>
+    </select>
+
+    <div class="row">
+      <button id="undoBtn">↶ Undo</button>
+      <button id="redoBtn">↷ Redo</button>
+    </div>
+    <button id="clearBtn">🗑 Clear</button>
+    <button id="saveBtn">💾 Save PNG</button>
+  </aside>
+
+  <canvas id="canvas"></canvas>
+
+  <script src="js/app.js"></script>
+  <script src="js/brushes.js"></script>
+  <script src="js/extra.js"></script>
+  <script src="js/extra2.js"></script>
+  <script src="js/main.js"></script>
+</body>
+</html>
