--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
   <script src="js/textures.js"></script>
   <script src="js/anime.js"></script>
   <script src="js/3d.js"></script>
+  <script src="js/fixes.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
