--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
   </div>
 
   <script src="js/brushes.js"></script>
+  <script src="js/hair-brushes.js"></script>
   <script src="js/tools.js"></script>
   <script src="js/layers.js"></script>
   <script src="js/figures.js"></script>
